# Weather

./: .gitignore  ROADMAP.md  RUNBOOK.md  pyproject.toml  run_scanner.bat  tlprompt.txt
deploy/: setup-spike-monitor.sh  spike-monitor.service
docs/: how_it_works.txt
docs/plans/: 2026-02-25-spike-monitor-design.md  2026-02-25-spike-monitor-plan.md
src/kalshi_weather/: __init__.py  __main__.py  accountant.py  artifacts.py  backtest.py  config.py  edge.py  emailer.py  kalshi_client.py  metar_parser.py  modeler.py  nws_scraper.py  orchestrator.py  output.py  planner.py  rate_limiter.py  risk.py  rules.py  runner.py  scanner.py  schemas.py  spike_alerter.py  spike_config.py  spike_monitor.py  team_lead.py  weather_api.py
tests/: test_edge.py  test_phase1.py  test_phase10.py  test_phase11_backtest.py  test_phase11_edge_cases.py  test_phase11_integration.py  test_phase11_unit.py  test_phase12.py  test_phase12_runner.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_spike.py
