[project]
name = "kalshi-weather"
version = "0.1.0"
description = "Kalshi Weather Temperature 'Unlikely NO' Scanner & Recommender"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pytz>=2024.1",
    "astral>=3.2",
    "jinja2>=3.1",
    "cryptography>=42.0",
    "python-dotenv>=1.2.1",
    "tzdata>=2025.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/kalshi_weather/artifacts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
